# network-importer

./: .bandit  .bandit.yml  .dockerignore  .env-example  .flake8  .gitignore  .pydocstyle.ini  .pylintrc  .travis.yml  .yamllint.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  network_importer.toml  pyproject.toml  requirements-develop.txt  requirements.txt  setup.py  tasks.py  uwsgi.ini
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  extensibility.md  getting_started.md  internal_structure.md  upgrade.md
docs/backend/: nautobot.md  netbox.md
dsync/: __init__.py  diff.py  exceptions.py  logging.py  utils.py
examples/: README.md
examples/multi_site_02/: README.md  ansible.cfg  inventory.ini  nautobot_setup.py  network_importer.toml  network_importer_nautobot.toml  pb.nautobot_setup.yaml  pb.netbox_setup.yaml
examples/multi_site_02/configs/configs/: hou-bb-01.conf  hou-leaf-01.conf  hou-leaf-02.conf  hou-rtr-01.conf  hou-rtr-02.conf  hou-spine-01.conf  hou-spine-02.conf  nyc-bb-01.conf  nyc-leaf-01.conf  nyc-rtr-01.conf  nyc-rtr-02.conf  nyc-spine-01.conf  nyc-spine-02.conf  sjc-bb-01.conf  sjc-leaf-01.conf  sjc-rtr-01.conf  sjc-rtr-02.conf
examples/spine_leaf_01/: ansible.cfg  inventory.ini  nautobot_setup.py  network_importer.toml  network_importer_nautobot.toml  pb.nautobot_setup.yaml  pb.netbox_setup.yaml
examples/spine_leaf_01/configs/configs/: amarillo.conf  austin.conf  dallas.conf  el-paso.conf  houston.conf  san-antonio.conf
examples/spine_leaf_01/data/austin/: lldp_neighbors.json
examples/spine_leaf_01/data/dallas/: lldp_neighbors.json
examples/spine_leaf_01/data/el-paso/: lldp_neighbors.json
examples/spine_leaf_01/data/houston/: lldp_neighbors.json
examples/spine_leaf_01/data/san-antonio/: lldp_neighbors.json
netmod/: __init__.py  diff.py  models.py  utils.py
netmod_netbox/: __init__.py  models.py
netmod_ni/: __init__.py
netmod_yaml/: __init__.py
network_importer/: __init__.py  base_model.py  cli.py  config.py  device.py  diff.py  drivers.py  exceptions.py  inventory.py  logging.py  main.py  main_old.py  model.py  models.py  performance.py  schema.py  tasks.py  utils.py  version.py
network_importer/adapters/: base.py
network_importer/adapters/nautobot_api/: adapter.py  config.py  exceptions.py  inventory.py  models.py  settings.py  tasks.py
network_importer/adapters/netbox/: __init__.py  models.py
network_importer/adapters/netbox_api/: __init__.py  adapter.py  config.py  exceptions.py  inventory.py  models.py  settings.py  tasks.py
network_importer/adapters/network_importer/: __init__.py  adapter.py  exceptions.py
network_importer/drivers/: __init__.py  arista_eos.py  cisco_default.py  converters.py  default.py  juniper_junos.py
network_importer/processors/: __init__.py  get_config.py  get_neighbors.py  get_vlans.py
network_importer/remote/: netbox.py
network_importer/templates/: hostvars.j2
tests/: .creds.env.test  ansible.cfg  nautobot-docker-compose.test.yml  nginx.conf
tests/netmod/: test_models.py
tests/unit/: conftest.py  test_base_model.py  test_config.py  test_diff.py  test_diffs.py  test_inventory.py  test_model.py  test_models.py  test_nb_inv.py  test_performance.py  test_utils.py
tests/unit/adapters/: test_base_adapter.py
tests/unit/adapters/nautobot_api/: test_inventory.py  test_nautobot_inventory.py
tests/unit/adapters/nautobot_api/fixtures/: ip_address.json  prefix_no_vlan.json  prefix_vlan.json  tag_01.json  tag_01_list.json  vlan_101_no_tag.json  vlan_101_tags_01.json
tests/unit/adapters/nautobot_api/fixtures/inventory/: devices.json  filtered_devices.json  platforms.json  stack_devices.json
tests/unit/adapters/nautobot_api/models/: skip_test_netbox_interface.py  skip_test_netbox_ipaddress.py  skip_test_netbox_prefix.py  test_nautobot_device.py  test_nautobot_interface.py  test_nautobot_ipaddress.py  test_nautobot_prefix.py  test_nautobot_vlan.py
tests/unit/adapters/netbox_api/: test_inventory.py  test_netbox_inventory.py
tests/unit/adapters/netbox_api/fixtures/inventory/: devices.json
tests/unit/adapters/netbox_api/fixtures/netbox_28/: prefix_no_vlan.json  prefix_vlan.json  vlan_101_tags_01.json
tests/unit/adapters/netbox_api/models/: test_ip_address.py  test_netbox_device.py  test_netbox_interface.py  test_netbox_ipaddress.py  test_netbox_ipaddress_pre29.py  test_netbox_prefix.py  test_netbox_vlan.py  test_netbox_vlan_pre29.py  test_prefix.py  test_vlan.py
tests/unit/adapters/network_importer/: test_add_prefix_from_ip.py  test_data_consistency.py  test_load_batfish_interface.py  test_load_batfish_ipaddress.py
tests/unit/config/: test_config.py
tests/unit/config/fixtures/: config_01.toml  config_env_var.toml
tests/unit/config/fixtures/NBInventory/: devices.json  filtered_devices.json  platforms.json  stack_devices.json
tests/unit/fixtures/inventory/: platforms.json  stack_devices.json
tests/unit/models/: test_base_model.py  test_base_obj.py  test_cable.py  test_interface.py  test_site.py  test_vlan.py
tests/unit/models_old/: test_base_model.py  test_cable.py  test_interface.py  test_site.py
tests/unit/processors/: test_get_neighbors.py
tests/unit/remote/: test_netbox26_interface.py  test_netbox26_ip_address.py  test_netbox27_interface.py  test_netbox27_ip_address.py  test_netbox_cable.py  test_netbox_interface.py  test_netbox_ip_address.py  test_netbox_prefix.py  test_netbox_vlan.py
tests/unit/remote/fixtures/netbox_26/: interface_access.json  interface_connected_circuit.json  interface_connected_interface.json  interface_lag.json  interface_lag_member.json  interface_loopback.json  interface_trunk.json  ip_address.json
tests/unit/remote/fixtures/netbox_27/: interface_access.json  interface_lag_member.json  interface_lag_trunk.json  interface_loopback.json  interface_no_type.json  interface_physical.json  ip_address.json
(+5 files in other folders)
