[tool.poetry]
name = "network-importer"
version = "3.1.0"
description = "Network Importer tool to import an existing network into a Database / Source Of Truth"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]
homepage = "https://github.com/networktocode/network-importer"
repository = "https://github.com/networktocode/network-importer"
keywords = ["network", "source-of-truth", "netbox", "diffsync"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "LICENSE",
    "README.md",
    "docs/*",
]
packages = [
    { include = "network_importer" },
]

[tool.poetry.dependencies]
python = "^3.8.0"
pynetbox = ">=5.0,<8.0"
toml = "^0.10"
nornir = "^3.0"
termcolor = ">=1.1,<3"
click = "^7.1 || ^8.0"
pydantic = "^1.6"
genie = ">=22.7,<24"
pyats = ">=22.7,<24"
netmiko = "^3.3"
ntc-templates = ">=2.0,<4"
structlog = ">=20.1.0,<24"
diffsync = "^1.2"
rich = ">=9.2"
pynautobot = "^1.0.2"
nornir-napalm = "^0.1.2"
nornir-utils = "^0.1.2"
nornir-netmiko = "^0.1.1"
pybatfish = "2023.5.12.784"

[tool.poetry.dev-dependencies]
bandit = "*"
pylint = "*"
pyment = "*"
pytest = "*"
pdbpp = "*"
requests_mock = "*"
pyyaml = "*"
black = "*"
pydocstyle = "*"
yamllint = "*"
invoke = "*"
flake8 = "*"
toml = "*"



[tool.poetry.scripts]
network-importer = 'network_importer.cli:main'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.pylint.basic]
# No docstrings required for private methods (pylint default) or for test_ functions.
no-docstring-rgx="^(_|test_)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    duplicate-code,
    too-few-public-methods,
    consider-using-with,
    unspecified-encoding,
    use-dict-literal,
    consider-using-from-import,
    use-list-literal,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
